<resources>
    <string name="app_name">Converter</string>
    <string name="action_favorites">Favorites</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="area">Area</string>
    <string name="currency">Currency</string>
    <string name="kilogramText">kilograms</string>
    <string name="meterText">meters</string>
    <string name="footText">feet</string>
    <string name="inchText">inches</string>
    <string name="yardText">yards</string>
    <string name="milesText">miles</string>
    <string name="kilometersText">kilometers</string>
    <string name="centnerText">centners</string>
    <string name="stoneText">stones</string>
    <string name="poundText">pounds</string>
    <string name="ounceText">ounces</string>
    <string name="gramText">grams</string>
    <string name="sqMeterText">square meters</string>
    <string name="sqKmeterText">square kilometers</string>
    <string name="sqFootText">square feet</string>
    <string name="acreText">acres</string>
    <string name="hectarText">hectars</string>
    <string name="eurText">EUR</string>
    <string name="gbpText">GBP</string>
    <string name="usdText">USD</string>
    <string name="hufText">HUF</string>
    <string name="nullPref">null</string>
    <string name="hectarPref">hectar</string>
    <string name="gramPref">gram</string>
    <string name="poundPref">pound</string>
    <string name="ouncePref">ounce</string>
    <string name="stonePref">stone</string>
    <string name="centnerPref">centner</string>
    <string name="kilogramPref">kilogram</string>
    <string name="sqMeterPref">sqMeter</string>
    <string name="sqKmeterPref">sqKmeter</string>
    <string name="sqFootPref">sqFoot</string>
    <string name="acrePref">acre</string>
    <string name="meterPref">meter</string>
    <string name="inchPref">inch</string>
    <string name="kilometerPref">kilometer</string>
    <string name="milesPref">mile</string>
    <string name="yardPref">yard</string>
    <string name="footPref">foot</string>
    <string name="cancel">Cancel</string>
    <string name="lengthPref">length_</string>
    <string name="weightPref">weight_</string>
    <string name="areaPref" translatable="false">area_</string>
    <string name="currencyPref">currency_</string>
    <string name="idNumLength">idNumLength</string>
    <string name="idNumWeight">idNumWeight</string>
    <string name="idNumArea">idNumArea</string>
    <string name="idNumCurrency">idNumCurrency</string>
    <string name="favAdded">added to favorites</string>
    <string name="addingToFavs">Adding measure to favorites</string>
    <string name="enter">Enter</string>
    <string name="passwordText">Please enter your password!</string>
    <string name="password">Password</string>
    <string name="code_accepted">Code input was right</string>
    <string name="code_rejected">Code input was incorrect</string>
    <string name="password_protection">Password protection</string>
    <string name="code_set_correct">Code set successfully!</string>
    <string name="code_set_incorrect">Code must be 4-8 numbers long!</string>
</resources>
