<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.bme.aut.converterhomework.MainActivity">
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:title="@string/action_favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_code_security"
        android:orderInCategory="100"
        android:title="@string/password_protection"
        app:showAsAction="never"
        android:checkable="true"/>
    <item
        android:id="@+id/action_code_input"
        android:orderInCategory="100"
        android:title="@string/password"
        app:showAsAction="never"/>
</menu>
