<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingTop="20dp"
    android:theme="@style/LayoutTheme">

    <LinearLayout
        android:id="@+id/currencyConvertLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="70dp">

        <EditText
            android:id="@+id/currencyCurrentValue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="10dp"
            android:inputType="numberDecimal"
            />

        <TextView
            android:id="@+id/currentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eurText"
            android:textSize="@dimen/currencyTextSize"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/valuesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="80dp"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/Line1Layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/line1Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:textSize="@dimen/currencyTextSize" />

            <TextView
                android:id="@+id/line1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hufText"
                android:textSize="@dimen/currencyTextSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Line2Layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/line2Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:textSize="@dimen/currencyTextSize" />

            <TextView
                android:id="@+id/line2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usdText"
                android:textSize="@dimen/currencyTextSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Line3Layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/line3Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:textSize="@dimen/currencyTextSize" />

            <TextView
                android:id="@+id/line3Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gbpText"
                android:textSize="@dimen/currencyTextSize" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
